[f3a5b176c28d479d52ef7344d22c743bc7f6c537]: Ajuste nos links dos anexos e imagens

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -364,15 +364,15 @@
 
 <h3 id="internet-explorer">Internet Explorer:</h3>
 
-<p><img src="./images/certificado-ie.jpg" alt="EV Internet Explorer Certificate" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-ie.jpg" alt="EV Internet Explorer Certificate" /></p>
 
 <h3 id="firefox">Firefox</h3>
 
-<p><img src="./images/certificado-firefox.jpg" alt="EV Firefox Certificate" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-firefox.jpg" alt="EV Firefox Certificate" /></p>
 
 <h3 id="google-chrome">Google Chrome</h3>
 
-<p><img src="./images/certificado-chrome.jpg" alt="EV Google Chrome Certificate" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-chrome.jpg" alt="EV Google Chrome Certificate" /></p>
 
 <h2 id="what-is-ev-ssl-certificate">What is EV SSL Certificate?</h2>
 
@@ -385,9 +385,10 @@
 <p>Just install the following three files in the server Trustedstore. Cielo does not offer support to the installation of the Certificate. If you are unsure about how to install the EV Certificate, then you should contact your server vendor support.</p>
 
 <ul>
-  <li><a href="./attachment/root.crt">Root Certificate</a></li>
-  <li><a href="./attachment/intermediaria.crt">Intermediate Certificate</a></li>
-  <li><a href="./attachment/ecommerce.cielo.com.br.crt">E-Commerce Cielo Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Root.crt">Root Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate1.crt">Intermediate 1 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate2.crt">Intermediate 2 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/ServerCertificate.crt">E-Commerce Cielo certificate</a></li>
 </ul>
 
 <h2 id="step-by-step-for-installation">Step-by-Step for Installation</h2>
@@ -407,82 +408,83 @@
 <p>Save the three files below into a new folder, or into a folder that can be easily remembered, as it will be used later:</p>
 
 <ul>
-  <li><a href="./attachment/root.crt">Root Certificate</a></li>
-  <li><a href="./attachment/intermediaria.crt">Intermediate Certificate</a></li>
-  <li><a href="./attachment/ecommerce.cielo.com.br.crt">E-Commerce Cielo Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Root.crt">Root Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate1.crt">Intermediate 1 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate2.crt">Intermediate 2 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/ServerCertificate.crt">E-Commerce Cielo certificate</a></li>
 </ul>
 
 <p><strong>Step 2:</strong></p>
 
 <p>In “Internet Explorer”, click on “Tools” menu and go to “Internet Options”:</p>
 
-<p><img src="./images/certificado-instalar-ie-1.jpg" alt="Install IE" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-1.jpg" alt="Install IE" /></p>
 
 <p>In “Firefox”, click on “Open Menu” menu and go to “Advanced” and “Options”:</p>
 
-<p><img src="./images/certificado-instalar-ff-1.jpg" alt="Install FF" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ff-1.jpg" alt="Install FF" /></p>
 
 <p>Control Google Chrome” and go to “Settings” and “Show advanced settings… “Change Proxy Settings and “Content” and Certificates:</p>
 
-<p><img src="./images/certificado-instalar-gc-1.jpg" alt="Install GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-gc-1.jpg" alt="Install GC" /></p>
 
 <p><strong>Step 3:</strong></p>
 
 <p>In Internet Explorer, under “Certificates”, click on “Import.”</p>
 
-<p><img src="./images/certificado-instalar-ie-2.jpg" alt="Install IE" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-2.jpg" alt="Install IE" /></p>
 
 <p>In Firefox, click on “View Certificates”, click on “Import”</p>
 
-<p><img src="./images/certificado-instalar-ff-2.jpg" alt="Install FF" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ff-2.jpg" alt="Install FF" /></p>
 
 <p>In Chrome, click on “Manage Certificates”, click on “Import”v</p>
 
-<p><img src="./images/certificado-instalar-gc-2.jpg" alt="Install GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-gc-2.jpg" alt="Install GC" /></p>
 
 <p><strong>Step 4:</strong></p>
 
 <p>In Internet Explorer and Chrome “Certificate Import Wizard”, click on “Next”.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-3.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-3.jpg" alt="Install IE and GC" /></p>
 
-<p><img src="./images/certificado-instalar-ie-gc-4.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-4.jpg" alt="Install IE and GC" /></p>
 
 <p>In Firefox “Servers Tab”, click on “Import”</p>
 
-<p><img src="./images/certificado-instalar-ff-3.jpg" alt="Install FF" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ff-3.jpg" alt="Install FF" /></p>
 
 <p><strong>Step 5:</strong></p>
 
 <p>In Chrome and Internet Explorer “Certificate Import Wizard”, click on “Search”, look for the folder where the files are and select the file “cieloecommerce.cielo.com.br.crt, click on “Open” and then “Next”.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-5.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-5.jpg" alt="Install IE and GC" /></p>
 
-<p><img src="./images/certificado-instalar-ie-gc-6.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-6.jpg" alt="Install IE and GC" /></p>
 
 <p><strong>Step 6:</strong></p>
 
 <p>Select the desired option: add the Certificate in a default folder or search for the folder of your choice.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-7.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-7.jpg" alt="Install IE and GC" /></p>
 
 <p><strong>Step 7:</strong></p>
 
 <p>Click on “Finish”.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-8.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-8.jpg" alt="Install IE and GC" /></p>
 
 <p><strong>Step 8:</strong></p>
 
 <p>Click on “Ok” to complete the import.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-9.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-9.jpg" alt="Install IE and GC" /></p>
 
 <aside class="notice">In Firefox there is no Successfull Import message, it only completes the import.</aside>
 
 <p>The Certificate may be viewed in the default tab “Other People” or at the one chosen by the customer.</p>
 
-<p><img src="./images/certificado-instalar-ie-gc-10.jpg" alt="Install IE and GC" /></p>
+<p><img src="https://developercielo.github.io/en/images/certificado-instalar-ie-gc-10.jpg" alt="Install IE and GC" /></p>
 
 <p><strong>Step 9:</strong></p>
 
@@ -4739,11 +4741,11 @@ In this model, the merchant’ system is in charge of defining the period, the t
 
 <p><strong>RecurrentPaymentID Structure</strong></p>
 
-<p><img src="./images/RECpaymentID.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/en/images/RECpaymentID.PNG" alt="" /></p>
 
 <p><strong>Scheduled Recurrence flow</strong></p>
 
-<p><img src="./images/FluxosRECPROG.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/en/images/FluxosRECPROG.PNG" alt="" /></p>
 
 <h4 id="use-case-1">Use case</h4>
 
