--- a/en/manual/webservice-1-5.html
+++ b/en/manual/webservice-1-5.html
@@ -295,9 +295,10 @@
 <p>Just install the following three files in the server Trustedstore. Cielo does not offer support to the installation of the Certificate. If you are unsure about how to install the EV Certificate, then you should contact your server vendor support.</p>
 
 <ul>
-  <li><a href="./attachment/root.crt">Root certificate</a></li>
-  <li><a href="./attachment/intermediaria.crt">Intermediate certificate</a></li>
-  <li><a href="./attachment/ecommerce.cielo.com.br.crt">E-Commerce Cielo certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Root.crt">Root Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate1.crt">Intermediate 1 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate2.crt">Intermediate 2 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/ServerCertificate.crt">E-Commerce Cielo certificate</a></li>
 </ul>
 
 <h2 id="step-by-step-installation">Step by Step Installation</h2>
@@ -317,9 +318,10 @@
 <p>Save the files below into a new folder, or recall easily to be used later:</p>
 
 <ul>
-  <li><a href="./attachment/root.crt">Root certificate</a></li>
-  <li><a href="./attachment/intermediaria.crt">Intermediate certificate</a></li>
-  <li><a href="./attachment/ecommerce.cielo.com.br.crt">E-Commerce Cielo certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Root.crt">Root Certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate1.crt">Intermediate 1 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/Intermediate2.crt">Intermediate 2 certificate</a></li>
+  <li><a href="https://developercielo.github.io/en/attachment/ServerCertificate.crt">E-Commerce Cielo certificate</a></li>
 </ul>
 
 <h4 id="2nd-step">2nd STEP:</h4>
@@ -527,7 +529,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 <span class="nt">&lt;/requisicao-transacao&gt;</span>
 </code></pre></div></div>
 
-<aside class="notice">All messages must be formatted correctly according to specified on <a href="attachment/ecommerce.xsd">XML Schema ecommerce.xsd</a></aside>
+<aside class="notice">All messages must be formatted correctly according to specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema ecommerce.xsd</a></aside>
 
 <h3 id="root-node">ROOT Node</h3>
 
@@ -2352,7 +2354,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">For the response codes of the authorization, consult the Directory of Response Codes of Authorization  os códigos de resposta da autorização consulte o Catálogo de Códigos de Resposta da Autorização (LR)</aside>
 
-<aside class="notice">All the messages must be formatted correctly, according specified on <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">All the messages must be formatted correctly, according specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h2 id="direct-authorization">Direct authorization</h2>
 
@@ -2436,7 +2438,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">To know if your store is eligible to use a recurrent authorization, check with our service center or Cielo E-commerce Web Support.</aside>
 
-<aside class="notice">All the messages must be formatted correctly, according specified on <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">All the messages must be formatted correctly, according specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h3 id="recurrent-authorization-with-card">Recurrent authorization with card</h3>
 
@@ -2490,9 +2492,9 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">The "Renova Fácil" (Easy Renew) is only available on recurrent transactions. The Easy Renew effectiveness depends of correct usage of recurrent transactions properly signalized. Consult banks and card issuers participants with Cielo E-commerce Web Support.</aside>
 
-<aside class="notice">All messages must be formatted correctly according to specified on <a href="attachment/ecommerce.xsd">XML Schema ecommerce.xsd</a></aside>
+<aside class="notice">All messages must be formatted correctly according to specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema ecommerce.xsd</a></aside>
 
-<aside class="notice">All the messages must be formatted correctly, according specified on <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">All the messages must be formatted correctly, according specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h3 id="authorization-of-a-transaction-previously-created">Authorization of a transaction previously created</h3>
 
@@ -2510,7 +2512,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">Requests to transactions that weren't submit to the authentication process or have been interrupted, because the holder made a mistake on the password won't be accepted.</aside>
 
-<aside class="notice">All messages must be formatted correctly according to specified on <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">All messages must be formatted correctly according to specified on <a href="https://developercielo.github.io/en/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <table>
   <thead>
