--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -532,7 +532,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 <span class="nt">&lt;/requisicao-transacao&gt;</span>
 </code></pre></div></div>
 
-<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="https://developercielo.github.io/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h3 id="raiz">raiz</h3>
 
@@ -2295,7 +2295,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">Para os códigos de resposta da autorização consulte o Catálogo de Códigos de Resposta da Autorização (LR)</aside>
 
-<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="https://developercielo.github.io/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h2 id="autorização-direta">Autorização Direta</h2>
 
@@ -2379,7 +2379,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">Para saber se sua loja é elegível a utilizar a autorização recorrente, consulte nossa central de relacionamento ou o Suporte Web Cielo eCommerce.</aside>
 
-<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="https://developercielo.github.io/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h3 id="autorização-recorrente-com-cartão">Autorização recorrente com Cartão</h3>
 
@@ -2433,7 +2433,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
 <aside class="notice">O Renova Fácil só está disponível para transações recorrentes. A efetividade do Renova Fácil depende do uso correto das transações recorrentes devidamente sinalizadas como tal. Consulte os bancos e bandeiras participantes com o Suporte Web Cielo eCommerce.</aside>
 
-<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="https://developercielo.github.io/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <h3 id="autorização-de-uma-transação-previamente-gerada">Autorização de uma transação previamente gerada</h3>
 
@@ -2453,7 +2453,7 @@ das transações que pararam após a execução deste processo. A mensagem para 
 
 <aside class="notice">Requisições para transações que não foram submetidas ao processo de autenticação ou foram interrompidas, pois o portador errou a senha não serão aceitas.</aside>
 
-<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
+<aside class="notice">Todas as mensagens devem estar formatadas corretamente segundo especificado no <a href="https://developercielo.github.io/attachment/ecommerce.xsd">XML Schema eCommerce.xsd</a></aside>
 
 <table>
   <thead>
