--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -385,10 +385,10 @@
 <p>Basta instalar os três arquivos a seguir na Trustedstore do servidor. A Cielo não oferece suporte para a instalação do Certificado. Caso não esteja seguro sobre como realizar a instalação do Certificado EV, então você deverá ser contatado o suporte do fornecedor do seu servidor.</p>
 
 <ul>
-  <li><a href="./attachment/Root.crt">Certificado Raiz</a></li>
-  <li><a href="./attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
-  <li><a href="./attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
-  <li><a href="./attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
+  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <h2 id="passo-a-passo-para-a-instalação">Passo a Passo para a Instalação</h2>
@@ -408,10 +408,10 @@
 <p>Salvar os três arquivos abaixo em uma pasta nova, ou que relembre facilmente, pois será utilizada posteriormente:</p>
 
 <ul>
-  <li><a href="./attachment/Root.crt">Certificado Raiz</a></li>
-  <li><a href="./attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
-  <li><a href="./attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
-  <li><a href="./attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
+  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <h4 id="2o-passo">2o Passo:</h4>
