--- a/tutorial/boas-praticas-de-ecommerce.html
+++ b/tutorial/boas-praticas-de-ecommerce.html
@@ -115,7 +115,7 @@
 
 <h2 id="números-de-cartões">Números de cartões</h2>
 
-<p><img src="/images/cartao.png" alt="Cartão Visa" /></p>
+<p><img src="https://developercielo.github.io/images/cartao.png" alt="Cartão Visa" /></p>
 
 <p>Basicamente, o número do cartão é composto por três partes:</p>
 
