[7d9385283898f3296462731701514cfa900e90f3]: Correções de links internos e externos

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -146,7 +146,7 @@
 <p>Por fim, após o término do desenvolvimento, é preciso dar início à homologação junto à Cielo
 para iniciar a operação no ambiente de produção.</p>
 
-<aside class="notice">Veja a seção <a href="#Homologacao">Homologação</a> para instruções sobre o processo de homologação</aside>
+<aside class="notice">Veja a seção <a href="#testes-e-homologação">Homologação</a> para instruções sobre o processo de homologação</aside>
 
 <h2 id="suporte-cielo">Suporte Cielo</h2>
 
@@ -1224,7 +1224,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
     <tr>
       <td>14</td>
       <td>Transação não autorizada. Cartão Inválido</td>
-      <td>Transação não autorizada. Cartão inválido. Pode ser bloqueio do cartão no banco emissor, dados incorretos ou tentativas de testes de cartão. Use o Algoritmo de Lhum (Mod 10) para evitar transações não autorizadas por esse motivo. Consulte www.cielo.com.br/desenvolvedores para implantar o Algoritmo de Lhum.</td>
+      <td>Transação não autorizada. Cartão inválido. Pode ser bloqueio do cartão no banco emissor, dados incorretos ou tentativas de testes de cartão. Use o Algoritmo de Lhum (Mod 10) para evitar transações não autorizadas por esse motivo. Consulte https://www.cielo.com.br/desenvolvedores para implantar o Algoritmo de Lhum.</td>
       <td>Não foi possível processar a transação. reveja os dados informados e tente novamente. Se o erro persistir, entre em contato com seu banco emissor.</td>
       <td>Não</td>
     </tr>
@@ -3468,7 +3468,7 @@ seguintes informações, que irão completar o cadastro:
 
 <p>A leitura dos dados do cartão no ambiente próprio é controlada por regras definidas pelo programa de segurança imposto pelas bandeiras de cartões.</p>
 
-<p>Para a Visa, esse programa é o conhecido como AIS (Account Information Security) PCI. Para maiores informações acesse: <a href="www.cielo.com.br">www.cielo.com.br</a> &gt; Serviços &gt; Serviços de Segurança &gt; AIS – Programa de Segurança da Informação , ou entre em contato conosco.</p>
+<p>Para a Visa, esse programa é o conhecido como AIS (Account Information Security) PCI. Para maiores informações acesse: <a href="https://www.cielo.com.br">https://www.cielo.com.br</a> &gt; Serviços &gt; Serviços de Segurança &gt; AIS – Programa de Segurança da Informação , ou entre em contato conosco.</p>
 
 <p>Para a Mastercard o programa de segurança é o SDP (Site Data Protection) PCI. Para maiores informações acesse: <a href="http://www.mastercard.com/us/sdp/index.html">http://www.mastercard.com/us/sdp/index.html</a>, ou entre em contato conosco.</p>
 
