[7e7b7c6a953be3b124d6f834714580fd05ce8036]: Correções de links internos e externos

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2589,13 +2589,13 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>9</td>
       <td>Não</td>
-      <td>Campo que avaliará os endereços de cobrança e entrega para difrentes cidades, estados ou países.<a href="#fraudanalysis.items.giftcategory">Valores</a></td>
+      <td>Campo que avaliará os endereços de cobrança e entrega para difrentes cidades, estados ou países.<a href="#fraudanalysisitemsgiftcategory">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.HostHedge</code></td>
       <td>Texto</td>
       <td>Não</td>
-      <td>Nível de importância do e-mail e endereços IP dos clientes em risco de pontuação.<a href="#fraudanalysis.items.hosthedge">Valores</a></td>
+      <td>Nível de importância do e-mail e endereços IP dos clientes em risco de pontuação.<a href="#fraudanalysisitemshosthedge">Valores</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2603,21 +2603,21 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>6</td>
       <td>Não</td>
-      <td>Nível dos testes realizados sobre os dados do comprador com pedidos recebidos sem sentido.<a href="#fraudanalysis.items.nonsensicalhedge">Valores</a></td>
+      <td>Nível dos testes realizados sobre os dados do comprador com pedidos recebidos sem sentido.<a href="#fraudanalysisitemsnonsensicalhedge">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.ObscenitiesHedge</code></td>
       <td>Texto</td>
       <td>6</td>
       <td>Não</td>
-      <td>Nível de obscenidade dos pedidos recebedidos.<a href="#fraudanalysis.items.obscenitieshedge">Valores</a></td>
+      <td>Nível de obscenidade dos pedidos recebedidos.<a href="#fraudanalysisitemsobscenitieshedge">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.PhoneHedge</code></td>
       <td>Texto</td>
       <td>6</td>
       <td>Não</td>
-      <td>Nível dos testes realizados com os números de telefones.<a href="#fraudanalysis.items.phonehedge">Valores</a></td>
+      <td>Nível dos testes realizados com os números de telefones.<a href="#fraudanalysisitemsphonehedge">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Name</code></td>
@@ -2652,20 +2652,20 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>6</td>
       <td>Não</td>
-      <td>Nível do risco do produto.<a href="#fraudanalysis.items.risk">Valores</a></td>
+      <td>Nível do risco do produto.<a href="#fraudanalysisitemsrisk">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.TimeHedge</code></td>
       <td>Texto</td>
       <td>Não</td>
-      <td>Nível de importância da hora do dia do pedido do cliente.<a href="#fraudanalysis.items.timehedge">Valores</a></td>
+      <td>Nível de importância da hora do dia do pedido do cliente.<a href="#fraudanalysisitemstimehedge">Valores</a></td>
       <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Type</code></td>
       <td>Texto</td>
       <td>Não</td>
-      <td>Tipo do produto.<a href="#fraudanalysis.items.type">Valores</a></td>
+      <td>Tipo do produto.<a href="#fraudanalysisitemstype">Valores</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2673,7 +2673,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>6</td>
       <td>Não</td>
-      <td>Nível de importância de frequência de compra do cliente.<a href="#fraudanalysis.items.velocityhedge">Valores</a></td>
+      <td>Nível de importância de frequência de compra do cliente.<a href="#fraudanalysisitemsvelocityhedge">Valores</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Passenger.Email</code></td>
@@ -2700,7 +2700,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Passenger.Rating</code></td>
       <td>Texto</td>
       <td>Não</td>
-      <td>Classificação do Passageiro.<a href="#fraudanalysis.items.passenger.rating">Valores</a></td>
+      <td>Classificação do Passageiro.<a href="#fraudanalysisitemspassengerrating">Valores</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2742,7 +2742,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">FraudAnalysis.Shipping.Method</code></td>
       <td>Texto</td>
       <td>Não</td>
-      <td>Tipo de serviço de entrega do produto.<a href="#fraudanalysis.items.method">Valores</a></td>
+      <td>Tipo de serviço de entrega do produto.<a href="#fraudanalysisshippingmethod">Valores</a></td>
       <td> </td>
     </tr>
     <tr>
