--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -596,7 +596,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
   <li>A API da Cielo retorna o <strong>CheckoutURL</strong>, que é a URL da tela transacional montada com base nos dados enviados pelo Lojista/Botão.</li>
   <li>A loja redireciona o cliente para a URL retornada pela Cielo. A tela apresentada é parte do <strong>Ambiente de pagamento seguro Cielo</strong>.</li>
   <li>O portador escolhe: Meio de pagamento, tipo de frete e endereço de entrega na tela transacional</li>
-  <li>O Checkout Cielo redireciona o cliente para a <strong>URL de Retorno</strong> escolhida pela loja, configurada no <a href="/tutorial/checkout-tutoriais">Backoffice Checkout Cielo</a> ou enviada pela integração via API.</li>
+  <li>O Checkout Cielo redireciona o cliente para a <strong>URL de Retorno</strong> escolhida pela loja, configurada no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Checkout Cielo</a> ou enviada pela integração via API.</li>
   <li>Se a loja possui uma <strong>URL de notificação</strong>, ela será notificada sobre a situação da transação.</li>
   <li>A loja avisa ao cliente que o processo foi concluído e que ele receberá mais informações sobre a compra e o pagamento por e-mail.e</li>
   <li>A loja processa o pedido de compra utilizando os dados do POST de notificação e, se a transação estiver autorizada, libera o pedido.</li>
@@ -614,7 +614,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="https://developercielo.github.io/images/checkout/tm01.png" alt="Ativando Modo de teste" /></p>
 
-<p>Quando a opção for salva, uma tarja vermelha será exibida na parte superior da tela. Ela será exibida em todas as telas do <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> e na tela transacional do Checkout Cielo.</p>
+<p>Quando a opção for salva, uma tarja vermelha será exibida na parte superior da tela. Ela será exibida em todas as telas do <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> e na tela transacional do Checkout Cielo.</p>
 
 <p>Essa tarja indica que a sua loja Checkout Cielo está agora operando em ambiente de teste, ou seja, toda a transação realizada nesse modo será considerada como teste.</p>
 
@@ -635,7 +635,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <h3 id="como-transacionar-no-modo-de-teste">Como transacionar no Modo de teste.</h3>
 
-<p>A realização de transações no modo de teste ocorre de forma normal. As informações da transação são enviadas via POST ou API, utilizando os parâmetros como descrito no tópico <a href="#integração-carrinho-de-compras">Integração com carrinho</a>, entretanto, os meios de pagamentos a serem usados serão meios simulados.</p>
+<p>A realização de transações no modo de teste ocorre de forma normal. As informações da transação são enviadas via POST ou API, utilizando os parâmetros como descrito no tópico <a href="#integração-por-api">Integração por API</a>, entretanto, os meios de pagamentos a serem usados serão meios simulados.</p>
 
 <p>Para realizar transações de teste com diferentes meios de pagamento, siga as seguintes regras:</p>
 
@@ -1722,11 +1722,11 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   <li>Sempre que se deseja disponibilizar uma venda rápida.</li>
 </ul>
 
-<p>Para utilizar este recurso, é necessário cadastrar o produto que se deseja vender, suas informações, e depois simplesmente copiar o código fonte gerado para este botão. A inclusão dos produtos é feita dentro do <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, no menu de Produtos/Cadastrar Produto.</p>
+<p>Para utilizar este recurso, é necessário cadastrar o produto que se deseja vender, suas informações, e depois simplesmente copiar o código fonte gerado para este botão. A inclusão dos produtos é feita dentro do <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, no menu de Produtos/Cadastrar Produto.</p>
 
 <h3 id="características-do-botão">Características do Botão</h3>
 
-<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter à compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
+<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter à compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
 
 <table>
   <thead>
@@ -1757,7 +1757,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <h3 id="criando-o-botão">Criando o Botão</h3>
 
-<p>Para utilizar este recurso, é necessário cadastrar o produto que se deseja vender, suas informações, e depois simplesmente copiar o código fonte gerado para este botão. A inclusão dos produtos é feita dentro do <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, no menu de Produtos/Cadastrar Produto.</p>
+<p>Para utilizar este recurso, é necessário cadastrar o produto que se deseja vender, suas informações, e depois simplesmente copiar o código fonte gerado para este botão. A inclusão dos produtos é feita dentro do <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, no menu de Produtos/Cadastrar Produto.</p>
 
 <p><strong>Tela de Cadastro:</strong></p>
 
@@ -1900,7 +1900,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <aside class="notice">O código deve ser inserido dentro da área adequada no seu HTML.</aside>
 
-<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter a compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
+<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter a compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
 
 <h2 id="fluxos-meios-de-pagamento">Fluxos Meios de pagamento</h2>
 
@@ -1908,7 +1908,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <p>O Checkout Cielo permite a utilização de Cartões de Crédito das principais bandeiras nacionais e internacionais. Esse meio de pagamento é liberado automaticamente junto a afiliação de Cielo, podendo ser utilizado inicialmente com a integração Checkout.</p>
 
-<p>Transações de cartão de crédito serão incluídas no <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, AUTORIZADO, PAGO, NEGADO, EXPIRADO OU CHARGEBACK dependendo do resultado da autorização junto ao Banco.</p>
+<p>Transações de cartão de crédito serão incluídas no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, AUTORIZADO, PAGO, NEGADO, EXPIRADO OU CHARGEBACK dependendo do resultado da autorização junto ao Banco.</p>
 
 <p><strong>Cartão de Crédito</strong> Ordem de Status:</p>
 
@@ -2089,7 +2089,7 @@ Esse grau de risco é o que deve guiar a decisão do lojista de capturar ou canc
 
 <p>Ao Acessar a tela transacional, o comprador obterá pelo pagamento via Cartão de débito, e será redirecionado ao ambiente bancário para Autenticação e Autorização.</p>
 
-<p>Transações de cartão de débito serão incluídas no <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, PAGO, NÃO AUTORIZADO ou NÃO FINALIZADO, dependendo do resultado da autorização junto ao Banco.</p>
+<p>Transações de cartão de débito serão incluídas no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, PAGO, NÃO AUTORIZADO ou NÃO FINALIZADO, dependendo do resultado da autorização junto ao Banco.</p>
 
 <p><strong>Cartão de Débito</strong> - Ordem de Status</p>
 
@@ -2127,7 +2127,7 @@ Esse meio de pagamento precisa ser cadastrado pelo Suporte Cielo para que seja d
 
 <p>Ao Acessar a tela transacional, o comprador obterá pelo pagamento via Boleto.</p>
 
-<p>Transações de boleto  serão incluídas no <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como NÃO FINALIZADO ou PAGO.
+<p>Transações de boleto  serão incluídas no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como NÃO FINALIZADO ou PAGO.
 Diferentemente de outros meios de pagamento, o boleto não possui atualização de Status. Caberá ao Lojista acessar o Backoffice e modificar o status do boleto manualmente.</p>
 
 <p><strong>Boleto</strong> - Ordem de Status</p>
@@ -2146,7 +2146,7 @@ Esse meio de pagamento é liberado via cadastro junto ao Suporte Cielo.</p>
 
 <p>Ao acessar a tela transacional, o comprador obterá pelo pagamento via Débito online, e será redirecionado ao ambiente bancário para Autenticação e Autorização.</p>
 
-<p>Transações de Débito online serão incluídos no <a href="/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, PAGO, NÃO AUTORIZADO ou NÃO FINALIZADO, dependendo do resultado da autorização junto ao Banco.</p>
+<p>Transações de Débito online serão incluídos no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Cielo Checkout</a> como PENDENTE, PAGO, NÃO AUTORIZADO ou NÃO FINALIZADO, dependendo do resultado da autorização junto ao Banco.</p>
 
 <p><strong>Débito online</strong> - Ordem de Status</p>
 
@@ -2913,7 +2913,7 @@ Abaixo, um exemplo do Nó</p>
 
 <p>A Recorrência é um processo de agendamento automático de transações de crédito, ou seja, é uma transação que se repetirá automaticamente, sem a necessidade do comprador acessar a tela transacional, de acordo com as regras definidas no momento do agendamento.</p>
 
-<aside class="notice">Caso uma das transações não seja autorizada, o Checkout Cielo executa a retentativa automaticamente; para mais detalhes sobre a retentativa automática, veja a seção <a href="#retentativa">Retentativa</a>.</aside>
+<aside class="notice">Caso uma das transações não seja autorizada, o Checkout Cielo executa a retentativa automaticamente; para mais detalhes sobre a retentativa automática, veja a seção <a href="#retentativa-de-recorrências">Retentativa</a>.</aside>
 
 <p>Transações recorrentes são ideais para modelos de negócios que envolvam o <strong>conceito de assinatura, plano ou mensalidade</strong> na sua forma de <strong>cobrança</strong>.
 Alguns exemplos de negócios são:</p>
@@ -3182,7 +3182,7 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
   <li><strong>Dia de ocorrência</strong> - É possivel modificar o dia de execução da transação recorrente.</li>
 </ul>
 
-<p>A atualização é feita exclusivamente via o Backoffice Cielo. Acesso o <a href="/tutorial/checkout-tutoriais"><strong>Tutorial do Backoffice Checkout Cielo</strong></a> para mais informações.</p>
+<p>A atualização é feita exclusivamente via o Backoffice Cielo. Acesso o <a href="https://developercielo.github.io/tutorial/checkout-tutoriais"><strong>Tutorial do Backoffice Checkout Cielo</strong></a> para mais informações.</p>
 
 <h1 id="suporte-cielo">Suporte Cielo</h1>
 
