[2f157aeabbff261ef7fb3af24e3b128538a73990]: Correções de links internos e externos

--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -118,7 +118,7 @@
 
 <h2 id="como-eu-crio-o-botão">Como eu crio o Botão?</h2>
 
-<p>O Botão é criado no momento de inclusão de um novo produto. Para isso, acesse o <a href="/Checkout-Backoffice/">Backoffice Checkout Cielo</a>, no menu Produtos/Cadastrar Produtos.</p>
+<p>O Botão é criado no momento de inclusão de um novo produto. Para isso, acesse o <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Checkout Cielo</a>, no menu Produtos/Cadastrar Produtos.</p>
 
 <h2 id="quais-informações-eu-preciso-para-montar-o-post">Quais informações eu preciso para montar o POST?</h2>
 
@@ -147,7 +147,7 @@
 
 <p>Ao finalizar uma transação, é enviado um POST com todos os dados da venda para a URL de Notificação, previamente cadastrada no BackOffice. O POST de notificação é enviado apenas no momento que a transação é finalizada, independentemente se houver alteração do status da transação.</p>
 
-<p>Dessa maneira os dados do pedido ficam atualizados no <a href="/Checkout-Backoffice/">Backoffice Checkout Cielo</a> e também no backoffice da loja/plataforma.</p>
+<p>Dessa maneira os dados do pedido ficam atualizados no <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Checkout Cielo</a> e também no backoffice da loja/plataforma.</p>
 
 <h2 id="para-que-serve-a-url-de-mudança-de-status">Para que serve a URL de Mudança de Status?</h2>
 
@@ -155,7 +155,7 @@
 
 <h2 id="onde-é-feito-o-cadastro-dessas-urls">Onde é feito o cadastro dessas URLs?</h2>
 
-<p>No <a href="/Checkout-Backoffice/">Backoffice Checkout Cielo</a>, no menu Configurações/Configurações da loja.</p>
+<p>No <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Backoffice Checkout Cielo</a>, no menu Configurações/Configurações da loja.</p>
 
 <h2 id="qual-a-diferença-entre-o--erro-opsss-antes-e-depois-da-exibição-da-tela-do-checkout-cielo">Qual a diferença entre o  Erro OPSSS antes e depois da exibição da tela do Checkout Cielo?</h2>
 
@@ -195,7 +195,7 @@
 
 <p>As categorias “Bens digitais” ou “Serviços” não necessitam desse tipo de informação.</p>
 
-<p>Para compreender a diferença entre os parâmetros do POST em relação a frete e tipos de produtos, compare os exemplos de post abaixo. Para mais informações, acesse o <a href="/Checkout-Cielo/">Manual de Integração Checkout Cielo</a>.</p>
+<p>Para compreender a diferença entre os parâmetros do POST em relação a frete e tipos de produtos, compare os exemplos de post abaixo. Para mais informações, acesse o <a href="https://developercielo.github.io/manual/checkout-cielo">Manual de Integração Checkout Cielo</a>.</p>
 
 <h3 id="parâmetros-obrigatórios">Parâmetros obrigatórios</h3>
 
