[59a8ac90043003e17104d04411a74607f9ddbe5d]: Correções de links internos e externos

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -2796,13 +2796,13 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>9</td>
       <td>No</td>
-      <td>Field that will evaluate the billing and delivery addresses for different cities, states or countries.<a href="#fraudanalysis.items.giftcategory">Values</a></td>
+      <td>Field that will evaluate the billing and delivery addresses for different cities, states or countries.<a href="#fraudanalysisitemsgiftcategory">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.HostHedge</code></td>
       <td>Text</td>
       <td>No</td>
-      <td>Level of importance of e-mail and IP addresses of customers at risk of scoring.<a href="#fraudanalysis.items.hosthedge">Values</a></td>
+      <td>Level of importance of e-mail and IP addresses of customers at risk of scoring.<a href="#fraudanalysisitemshosthedge">Values</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2810,21 +2810,21 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of testing performed on buyer data with meaningless received orders.<a href="#fraudanalysis.items.nonsensicalhedge">Values</a></td>
+      <td>Level of testing performed on buyer data with meaningless received orders.<a href="#fraudanalysisitemsnonsensicalhedge">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.ObscenitiesHedge</code></td>
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of obscenity of received orders.<a href="#fraudanalysis.items.obscenitieshedge">Values</a></td>
+      <td>Level of obscenity of received orders.<a href="#fraudanalysisitemsobscenitieshedge">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.PhoneHedge</code></td>
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of tests performed with telephone numbers.<a href="#fraudanalysis.items.phonehedge">Values</a></td>
+      <td>Level of tests performed with telephone numbers.<a href="#fraudanalysisitemsphonehedge">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Name</code></td>
@@ -2859,20 +2859,20 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Product risk level.<a href="#fraudanalysis.items.risk">Values</a></td>
+      <td>Product risk level.<a href="#fraudanalysisitemsrisk">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.TimeHedge</code></td>
       <td>Text</td>
       <td>No</td>
-      <td>Level of importance of customer’s order day time.<a href="#fraudanalysis.items.timehedge">Values</a></td>
+      <td>Level of importance of customer’s order day time.<a href="#fraudanalysisitemstimehedge">Values</a></td>
       <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Type</code></td>
       <td>Text</td>
       <td>No</td>
-      <td>Product type.<a href="#fraudanalysis.items.type">Values</a></td>
+      <td>Product type.<a href="#fraudanalysisitemstype">Values</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2880,7 +2880,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Level of importance of customer purchase frequency.<a href="#fraudanalysis.items.velocityhedge">Values</a></td>
+      <td>Level of importance of customer purchase frequency.<a href="#fraudanalysisitemsvelocityhedge">Values</a></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Passenger.Email</code></td>
@@ -2907,7 +2907,7 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">FraudAnalysis.Items.Passenger.Rating</code></td>
       <td>Text</td>
       <td>No</td>
-      <td>Passenger classification.<a href="#fraudanalysis.items.passenger.rating">Values</a></td>
+      <td>Passenger classification.<a href="#fraudanalysisitemspassengerrating">Values</a></td>
       <td> </td>
     </tr>
     <tr>
@@ -2949,7 +2949,7 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">FraudAnalysis.Shipping.Method</code></td>
       <td>Text</td>
       <td>No</td>
-      <td>Type of product delivery service.<a href="#fraudanalysis.items.method">Values</a></td>
+      <td>Type of product delivery service.<a href="#fraudanalysisshippingmethod">Values</a></td>
       <td> </td>
     </tr>
     <tr>
